--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,10 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
-
-
 
 
 
